--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "sample1",
+            "label": "ruina",
             "type": "shell",
             "command": "g++ sample1/main.cpp -std=c++11 -levent -o sample1.exe",
             "group": {
